# agent_request_approval

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-28-phase-0-foundation.md  README.md  (+8 more)
services/go/: go.mod
services/py/: pyproject.toml
services/py/eval/gold/: cases.jsonl
services/py/reimb/: __init__.py  errors.py  logging.py  retry.py  worker.py
services/py/reimb/adjudicate/: agent.py  gate.py  proposal.py
services/py/reimb/eval/: metrics.py  runner.py
services/py/reimb/extract/: agent.py  s3_image.py  schema.py
services/py/reimb/graph/: build.py  state.py
services/py/reimb/llm/: gateway.py
services/py/reimb/obs/: trace.py
services/py/reimb/rag/: agent.py  chunk.py  retriever.py
services/py/reimb/review/: resume.py
services/py/reimb/safety/: guard.py  injection.py  pii.py
services/py/reimb/validate/: agent.py
services/py/tests/: conftest.py  test_retry.py  test_smoke.py
services/py/tests/adjudicate/: test_agent.py  test_gate.py
services/py/tests/eval/: test_metrics.py
services/py/tests/extract/: test_agent.py  test_schema.py
services/py/tests/graph/: test_graph.py  test_worker.py
services/py/tests/integration/: test_end_to_end.py
services/py/tests/llm/: test_gateway.py
services/py/tests/obs/: test_trace.py
services/py/tests/rag/: test_agent.py  test_chunk.py  test_retriever.py
services/py/tests/review/: test_resume.py
services/py/tests/safety/: test_guard.py  test_injection.py  test_pii.py
services/py/tests/validate/: test_agent.py
(+11 files in other folders)
